--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>I can push to git hub</h1>
     <h3>new code change</h3>
     <p>My new git push</p>
+    <img src="images/1.jpg" alt="someone">
     <img src="4.jpg" alt="avater">
 </body>
 </html>
