--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>I can push to git hub</h1>
+    <h1>I can push to git hub have a good day</h1>
     <h3>new code change</h3>
     <p>My new git push</p>
     <img src="images/1.jpg" alt="someone">
